structure header setting

--- a/index.html
+++ b/index.html
@@ -12,7 +12,30 @@
 <body>
     <!-- header -->
     <header>
-        
+        <nav>
+            <div id="nav-sx">
+
+            </div>
+
+            <div id="nav-sx">
+
+            </div>
+        </nav>
+
+        <div id="jumbotron">
+            <h1>
+
+            </h1>
+
+            <div class="col-sx">
+
+            </div>
+
+            <div class="col-dx">
+
+            </div>
+        </div>
+
     </header>
     <!-- /header -->
 
