--- a/index.html
+++ b/index.html
@@ -12,16 +12,46 @@
 <body>
     <!-- header -->
     <header>
-        <nav>
+        <!-- nav -->
+        <nav class="clearfix">
+            <!-- nav dx -->
             <div id="nav-sx">
-
+                    <img  id="logo" src="img/logo-small.png" alt="logo">                
+                <ul class="menu">
+                    <li class="menu-item">
+                        <a href="#">Perch&egrave; Dropbox&quest;</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#">Funzioni</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#">Piani e prezzi</a>
+                    </li>
+                    
+                </ul>
             </div>
 
-            <div id="nav-sx">
+            <!-- nav sx -->
+            <div id="nav-dx">
+                <ul class="menu">
+                    <li class="menu-item">
+                        <a href="#">Supporto</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#">Contatta l&apos;Sufficio vendite</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#">Accedi</a>
+                    </li>
+                    
+                </ul>
 
+               <a class="btn" href="#">
+                   Inizia
+               </a>
             </div>
         </nav>
-
+        <!-- /nav -->
         <div id="jumbotron">
             <h1>
 
