--- a/index.html
+++ b/index.html
@@ -52,20 +52,21 @@
             </div>
         </nav>
         <!-- /nav -->
-        <div id="jumbotron">
-            <h1>
+        <section id="sfondo-jumbotron">
+            <div id="jumbotron" class="clearfix">
+                <h1>
+                    Tutto ci&ograve; che ti serve per il lavoro&comma; in un unico posto
+                </h1>
 
-            </h1>
+                <div class="col-sx">
 
-            <div class="col-sx">
+                </div>
 
+                <div class="col-dx">
+
+                </div>
             </div>
-
-            <div class="col-dx">
-
-            </div>
-        </div>
-
+        </section>
     </header>
     <!-- /header -->
 
