--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <!-- nav -->
         <nav class="clearfix">
             <!-- nav dx -->
-            <div id="nav-sx">
-                    <img  id="logo" src="img/logo-small.png" alt="logo">                
+            <div id="nav-sx">   
+                <a href="#"><img  id="logo" src="img/logo-small.png" alt="logo"></a>                
                 <ul class="menu">
                     <li class="menu-item">
                         <a href="#">Perch&egrave; Dropbox&quest;</a>
@@ -59,11 +59,20 @@
                 </h1>
 
                 <div class="col-sx">
-
+                    <p>
+                        Finalmente tutti i tuoi strumenti&comma; contenuti e collaboratori sono accessibili dallo stesso posto&period; Dropbox Business &egrave; pi&ugrave; di uno spazio di archiviazione sicuro&colon; &egrave; un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente&period;
+                    </p>
+                    <a class="btn" href="#">
+                        Inizia la tua prova gratuita
+                    </a>
+                    <div id="annulla">
+                        annulla in qualsiasi momento
+                    </div>
+                    <a id="freccia" href="#"><i class="fas fa-arrow-down"></i></a>
                 </div>
 
                 <div class="col-dx">
-
+                    <img src="img/jumbo.png" alt="jumbotron">
                 </div>
             </div>
         </section>
