--- a/index.html
+++ b/index.html
@@ -566,12 +566,60 @@
         </section>
         <!-- /section 3 -->
 
+
         <!-- section 4 -->
-        <section>
-            <div class="titolo-section">
+        <section id="section-4">
+
+            <!-- titolo -->
+            <div class="titolo-section centratura">
                 <h2>
-                   Pi&ugrave; di &#53;&#48;&#48;&period;&#48;&#48;&#48;
+                   Pi&ugrave; di &#53;&#48;&#48;&period;&#48;&#48;&#48; team utilizzano Dropbox Business
                 </h2>
+                <a href="#">Scopri di pi&ugrave; sui nostri clienti</a>
+            </div>
+
+            <!-- sponsor -->
+            <div class="clearfix">
+                <div class="squares-principal clearfix">
+                    <div class="square green">
+                        <img src="img/designit.svg" alt="logo sponsor">
+                    </div>
+                    <div class="square bordeaux">
+                        <img src="img/arizona_state_university.svg" alt="logo sponsor">
+                    </div>
+                    <div class="square skyblue">
+                        <img src="img/university_of_florida.svg" alt="logo sponsor">
+                    </div>
+                    <div class="square firered">
+                        <img src="img/topps.svg" alt="logo sponsor">
+                    </div>
+                </div>
+
+                <div class="squares-principal center">                    
+                    <img src="img/designit.svg" alt="logo sponsor">
+                    <hr>
+                    <p class="text-section">
+                        &quot;I membri del nostro team lavorano costantemente in Paesi&comma; fusi orari e uffici diversi&period; Ora molte soluzioni sono compatibili con queste esigente&comma; ma nessna &egrave; facile quanto Dropbox e Dropbox Paper&period; Ora moltw soluzioni sono compatibili con queste esigenze&comma;ma nessuna &egrave; facile quanto Dropbox Paper&quot;&period;
+                    </p>
+                    <span class="text-section">
+                        Morten Thomsen&comma; Global IT Lead
+                    </span>                
+                </div>
+
+                <div class="squares-principal">
+                    <div class="square firered">
+                        <img src="img/world_bicycle_relief.svg" alt="logo sponsor">
+                    </div>
+                    <div class="square grey">
+                        <img src="img/hearst_corp.svg" alt="logo sponsor">
+                    </div>
+                    <div class="square blue">
+                        <img src="img/lonely_planet.svg" alt="logo sponsor">
+                    </div>
+                    <div class="square yellow">
+                        <img src="img/clear_channel.svg" alt="logo sponsor">
+                    </div>
+                </div>
             </div>
         </section>
         <!-- /section 4 -->
