--- a/index.html
+++ b/index.html
@@ -625,8 +625,56 @@
         <!-- /section 4 -->
 
         <!-- section 5 -->
-        <section>
-            
+        <section >
+            <!-- banner con bottone prova -->
+            <div id="sfondo-section-5">
+                <div id="banner-prova" class="centratura"   >
+                    <div class="clearfix">
+                        <h2>
+                            Porta Dropbox Business nella tua azienda
+                        </h2>
+                        <div id="container-btn-section-5">
+                            <a class="btn white-black"  id="prova-gratuita"  href="#">
+                                Inizia la tua prova gratuita
+                            </a>                      
+                        </div>
+                       
+                    </div>
+                </div>
+           </div>
+
+            <!-- domande frequenti -->
+            <div class="centratura" id="frequente-questions">
+                <div class="title-section domande-frequenti">
+                    <h2>
+                        Domande frequenti
+                    </h2>                   
+                </div>
+                <div class="item-question">
+                    <span class="text-section">
+                        Qual &egrave; la differenza tra Dropbox Business Standard e Dropbox Business Advanced&quest;
+                    </span>
+                    <i class="fas fa-chevron-down"></i>
+                </div>
+                <div class="item-question">
+                    <span class="text-section">
+                        Qual &egrave; la differenza tra Dropbox Business Standard e Dropbox Business Advanced&quest;
+                    </span>
+                    <i class="fas fa-chevron-down"></i>
+                </div>
+                <div class="item-question">
+                    <span class="text-section">
+                        Qual &egrave; la differenza tra Dropbox Business Standard e Dropbox Business Advanced&quest;
+                    </span>
+                    <i class="fas fa-chevron-down"></i>
+                </div>
+                <div class="item-question">
+                    <span class="text-section">
+                        Qual &egrave; la differenza tra Dropbox Business Standard e Dropbox Business Advanced&quest;
+                    </span>
+                    <i class="fas fa-chevron-down"></i>
+                </div>
+            </div>
         </section>
         <!-- /section 5 -->
     </main>
