--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <a href="#">Supporto</a>
                         </li>
                         <li class="menu-item">
-                            <a href="#">Contatta l&apos;Sufficio vendite</a>
+                            <a href="#">Contatta l&apos;ufficio vendite</a>
                         </li>
                         <li class="menu-item">
                             <a href="#">Accedi</a>
@@ -72,7 +72,7 @@
                     <div id="annulla">
                         annulla in qualsiasi momento
                     </div>
-                    <a id="freccia" href="#"><i class="fas fa-arrow-down"></i></a>
+                    <a id="freccia" href="#section-1"><i class="fas fa-arrow-down"></i></a>
                 </div>
 
                 <div class="col-dx">
@@ -93,8 +93,11 @@
                 <h2>
                     Trova il piano Dropbox Business che fa per te 
                 </h2>
-                <input type="radio"> <span>fatturazione mensile</span>
-                <input type="radio"> <span>Fatturazione annuale</span>
+                <div class="fake-check checked"></div> 
+                <span>fatturazione mensile</span>
+
+                <div class="fake-check"></div> 
+                <span>Fatturazione annuale</span>
             </div>
 
             <div class="clearfix">
@@ -580,7 +583,7 @@
 
             <!-- sponsor -->
             <div class="clearfix">
-                <div class="squares-principal clearfix">
+                <div class="container-squares clearfix">
                     <div class="square green">
                         <img src="img/designit.svg" alt="logo sponsor">
                     </div>
@@ -595,7 +598,7 @@
                     </div>
                 </div>
 
-                <div class="squares-principal center">                    
+                <div class="container-squares center">                    
                     <img src="img/designit.svg" alt="logo sponsor">
                     <hr>
                     <p class="text-section">
@@ -606,7 +609,7 @@
                     </span>                
                 </div>
 
-                <div class="squares-principal">
+                <div class="container-squares clearfix">
                     <div class="square firered">
                         <img src="img/world_bicycle_relief.svg" alt="logo sponsor">
                     </div>
