--- a/bonus/index.html
+++ b/bonus/index.html
@@ -692,6 +692,8 @@
                         Qual &egrave; la differenza tra Dropbox Business Standard e Dropbox Business Advanced&quest;
                     </span>
                     <i class="fas fa-chevron-down"></i>
+                    
+                    <!-- risposta dropdown -->
                     <div class="risposte">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, nulla unde ut repellat dolore necessitatibus rem optio eaque, repellendus officiis minus! Magnam obcaecati quibusdam earum pariatur blanditiis aliquid suscipit voluptas. Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita vitae illo culpa corrupti ad, consequuntur quas repellat numquam quia alias error, obcaecati at voluptates aut cupiditate, dicta inventore officia iusto? Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero temporibus, accusantium natus repellat, molestias quidem, quis quas consectetur placeat illum veritatis adipisci nobis sint voluptas accusamus. Corrupti quas aliquid pariatur?
                     </div>
@@ -703,6 +705,8 @@
                         Qual &egrave; la differenza tra Dropbox Business Standard e Dropbox Business Advanced&quest;
                     </span>
                     <i class="fas fa-chevron-down"></i>
+                    
+                    <!-- risposta dropdown -->
                     <div class="risposte">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, nulla unde ut repellat dolore necessitatibus rem optio eaque, repellendus officiis minus! Magnam obcaecati quibusdam earum pariatur blanditiis aliquid suscipit voluptas. Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita vitae illo culpa corrupti ad, consequuntur quas repellat numquam quia alias error, obcaecati at voluptates aut cupiditate, dicta inventore officia iusto? Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero temporibus, accusantium natus repellat, molestias quidem, quis quas consectetur placeat illum veritatis adipisci nobis sint voluptas accusamus. Corrupti quas aliquid pariatur?
                     </div>
@@ -714,6 +718,8 @@
                         Qual &egrave; la differenza tra Dropbox Business Standard e Dropbox Business Advanced&quest;
                     </span>
                     <i class="fas fa-chevron-down"></i>
+
+                    <!-- risposta dropdown -->
                     <div class="risposte">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, nulla unde ut repellat dolore necessitatibus rem optio eaque, repellendus officiis minus! Magnam obcaecati quibusdam earum pariatur blanditiis aliquid suscipit voluptas. Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita vitae illo culpa corrupti ad, consequuntur quas repellat numquam quia alias error, obcaecati at voluptates aut cupiditate, dicta inventore officia iusto? Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero temporibus, accusantium natus repellat, molestias quidem, quis quas consectetur placeat illum veritatis adipisci nobis sint voluptas accusamus. Corrupti quas aliquid pariatur?
                     </div>
@@ -725,6 +731,8 @@
                         Qual &egrave; la differenza tra Dropbox Business Standard e Dropbox Business Advanced&quest;
                     </span>
                     <i class="fas fa-chevron-down"></i>
+
+                    <!-- risposta dropdown -->
                     <div class="risposte">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, nulla unde ut repellat dolore necessitatibus rem optio eaque, repellendus officiis minus! Magnam obcaecati quibusdam earum pariatur blanditiis aliquid suscipit voluptas. Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita vitae illo culpa corrupti ad, consequuntur quas repellat numquam quia alias error, obcaecati at voluptates aut cupiditate, dicta inventore officia iusto? Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero temporibus, accusantium natus repellat, molestias quidem, quis quas consectetur placeat illum veritatis adipisci nobis sint voluptas accusamus. Corrupti quas aliquid pariatur?
                     </div>
